# dbchat

./: .gitattributes  .gitignore  CNAME  README.md  SECURITY.md  index.html  native.ts  package.json  server.ts  shared.ts  style.css  tsconfig.app.json  vite.config.ts  web.ts
api/: ai.ts  apiKeys.ts  chats.ts  databases.ts  db.ts  errors.ts  ping.ts  query.ts  settings.ts  types.d.ts
api/adapters/: index.ts  mysql.ts  postgresql.ts  types.d.ts
api/migrations/: 2025-05-17-add-model-to-messages.ts
assets/: style.css
native/: .gitignore  Cargo.toml  package.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
native/capabilities/: default.json
native/icons/: icon.icns
native/src/: lib.rs  main.rs
src/: style.css
web/: data.ts  http.ts  index.html  main.ts  router.ts  style.css  system.ts  types.d.ts  utils.ts
web/App/: App.vue
web/Chat/: Chat.vue  Editor.vue  Loading.vue  Option.vue  Options.vue  Results.vue  parse.ts  stream.ts
web/Settings/: Settings.vue
web/assets/styles/: fonts.css
web/components/: ActionButton.vue  Button.vue  Card.vue  CardBox.vue  Dropdown.vue  GhostButton.vue  HelpText.vue  Icon.vue  Label.vue  RemoveButton.vue  Textfield.vue
