[package]
name = "dbchat"
version = "1.0.0"
description = "Chat with a database using AI"
authors = ["Vladimir Sabev", "Boyan Kostov"]
edition = "2021"

[lib]
crate-type = ["cdylib"]  # For Android
path = "src/lib.rs"      # Explicitly specify lib.rs

[[bin]]
name = "dbchat"
path = "src/main.rs"     # For desktop

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-http = "2.4.3"
tauri-plugin-shell = "2.2.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
